--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 AddType audio/mpeg .mp3
 AddType audio/wav .wav
 AddType audio/ogg .ogg
-ErrorDocument 404 /not-found-page.html
+ErrorDocument 404 /not-found.html
